# GameDev

./: .gitignore  CMakeLists.txt  animate_quadtree.cpp  animatedsprite.cpp  animatedsprite.h  audio.cpp  audio.h  camera.cpp  camera.h  combat.cpp  combat.h  command.cpp  command.h  enemy.cpp  enemy.h  enemytype.cpp  enemytype.h  engine.cpp  engine.h  entity.h  fsm.cpp  fsm.h  graphics.cpp  graphics.h  level.cpp  level.h  main.cpp  physics.cpp  physics.h  player.cpp  player.h  projectile.cpp  projectile.h  quadtree.cpp  quadtree.h  settings.cpp  settings.h  settings.txt  sprite.h  test_qt.cpp  (+6 more)
assets/: black_hole.txt  characters.txt  characters1.txt  decors-1.txt  endgame.txt  enemies.txt  game-over.txt  game_lost.txt  game_won.txt  level-00.txt  level-01.txt  level-02.txt  level-blank.txt  objects.txt  objects.xcf  sounds.txt  space.txt  spritesheet.xcf  theme-basic.txt  theme-spaceship.txt  tileset-1.txt  tileset.txt
